--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-# Specifies intentionally untracked files to ignore when using Git
-# http://git-scm.com/docs/gitignore
 
 node_modules/
 platforms/
 plugins/
+logs/*
+!.gitkeep
+tmp
+.idea
+.DS_Store
+bower_components
+.grunt
+.sass-cache/
+*.map
 hooks/
-bower.json
-config.xml
-gulpfile.js
-.idea/
-package.json
-ionic.project
